[package]
name = "card"
version = "0.1.0"
authors = ["TobiasLino <tobias.lino@fatec.sp.gov.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = { path = "model" }
view = { path = "view" }
controller = { path = "controller" }


[workspace]
members = [
    "model",
    "view",
    "controller"
]