[package]
name = "card"
version = "0.1.0"
authors = ["TobiasLino <tobias.lino@fatec.sp.gov.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = { path = "model" }
view = { path = "view" }
controller = { path = "controller" }
rocket = "0.4.5"
rocket_codegen = "0.4.5"
serde = "1.0.114"
serde_json = "1.0.56"
serde_derive = "1.0.114"

[dependencies.rocket_contrib]
version = ""
defaul-features = false
features = ["json"]


[workspace]
members = [
    "model",
    "view",
    "controller"
]