[package]
name = "model"
version = "0.1.0"
authors = ["TobiasLino <tobias.lino@fatec.sp.gov.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.21", features = ["full"] }
error-chain = "0.12.2"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
rocket = "0.4.5"
rocket_codegen = "0.4.5"
diesel = "1.4.5"
diesel_codegen = "0.16.1"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"

[dependencies.rocket_contrib]
version = ""
defaul-features = false
features = ["json"]